# startup_system

./: CMakeLists.txt  README.md  package.xml  start_system.sh
launch/: acceleration.launch.py  autocross.launch.py  initialize_nodes.launch.py  skidpad.launch.py
